--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "webpack": "^3.6.0",
     "es6-promise": "^4.1.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2"
+    "babel-loader": "^7.1.2",
+    "cross-env": "^5.1"
   }
 }
