--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   },
   "devDependencies": {
     "vue": "^2.5.17",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
+    "webpack-merge": "^4.1.1",
     "es6-promise": "^4.1.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
