--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-merge": "^4.1.1"
+  },
+  "dependencies": {
+    "bulma": "^0.7.2"
   }
 }
